--- a/cn/team.html
+++ b/cn/team.html
@@ -264,7 +264,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">马什克耶夫</div>
+                            <div class="member-name">Alksey Mashkeev</div>
                             <div class="member-position">CEO</div>
                             <div class="member-text">自2006年起专业从事三维可视化，在各个领域成立了几家公司：建筑业务、室内装修设计、装饰材料销售、IT、VR宣传者。</div>
                         </div>
@@ -287,7 +287,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">拉津</div>
+                            <div class="member-name">Igor Razin</div>
                             <div class="member-position">CTO</div>
                             <div class="member-text">开发多用户交互，在Unity平台上创建情景。自2014年开始从事VR开发。是世界上多用户quest的首批创造者之一。</div>
                         </div>
@@ -310,7 +310,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">西马诺夫斯基</div>
+                            <div class="member-name">Sergey Simanovskiy</div>
                             <div class="member-position">Blockchain consultant</div>
                             <div class="member-text">超过6年的区块链项目工作经验，包括成功进行的ICO。Glols.Fund项目负责人和思想鼓舞着(区块链风险投资和Golos项目组管理)。</div>
                         </div>
@@ -333,7 +333,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">卡蕾娃诺娃</div>
+                            <div class="member-name">Dar'ja Kolivanova</div>
                             <div class="member-position">PM</div>
                             <div class="member-text">管理金融部门和IT技术项目。项目实现了从零到在市场上推出产品。他认为，最近几年将是VR/AR扎根到我们的生活中的最为关键的几年。</div>
                         </div>
@@ -353,7 +353,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">马克西缅科</div>
+                            <div class="member-name">Tat'ana Maksimenko</div>
                             <div class="member-position">Head of PR</div>
                             <div class="member-text">2014年开始研究区块链技术，区块链宣传者。他是 CoinFox和 Where Is John Connor 公关公司项目创始人之一和前人主编。</div>
                         </div>
@@ -376,7 +376,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">古利娜拉</div>
+                            <div class="member-name">Gulnara Galeeva</div>
                             <div class="member-position">Marketing Director</div>
                             <div class="member-text">15年市场营销、公关工作经验。在线上、线下、公关、Event拥有丰富经验。 Digital市场营销专家。参与的主要项目有东风雪铁龙、REN TV、Europa plus、Otto group Russia、Osterreichischen Lotterien und Casinos。</div>
                         </div>
@@ -396,7 +396,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">扎哈罗夫</div>
+                            <div class="member-name">Dmitry Zaharov</div>
                             <div class="member-position">3D graphic designer</div>
                             <div class="member-text">3D设计师/建模师，负责CG项目，创造虚拟内容，专业摄影，建筑项目空中摄影。</div>
                         </div>
@@ -416,7 +416,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name"> 库夫申尼科夫</div>
+                            <div class="member-name"> Ivan Kuvshnnikov</div>
                             <div class="member-position">Sound designer</div>
                             <div class="member-text">拥有电视和大众传媒领域的经验。成立交互式音频研发人员协会。他认为，声音形成将在制作VR/AR中发挥重要作用。</div>
                         </div>
@@ -439,7 +439,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">克拉依尼</div>
+                            <div class="member-name">Sergey Krainiy</div>
                             <div class="member-position">VR Engineer</div>
                             <div class="member-text">场景建筑艺术。在GameDev工作超过10年。曾担任saber3d.com的主要项目的TeamLeader。</div>
                         </div>
@@ -462,7 +462,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">雅科夫列科娃</div>
+                            <div class="member-name">Ekaterina Yakovlenkova</div>
                             <div class="member-position">Backoffice Manager</div>
                             <div class="member-text">拥有在BBDD、SODA广告公司工作的经验，担任公关经理。2017年加入Coinfox信息门户公司。</div>
                         </div>
@@ -482,7 +482,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">察廖夫</div>
+                            <div class="member-name">Pavel Zharev</div>
                             <div class="member-position">VR Developer</div>
                             <div class="member-text">游戏策划，拥有15年资历，在大型国际公司和独立部门工作的电脑游戏开发专家。他相信，VR/AR技术将为所有领域的借口形成不容妥协的解决方案。</div>
                         </div>
@@ -505,7 +505,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">科罗尔</div>
+                            <div class="member-name">Vsevolod Korol</div>
                             <div class="member-position">Analyst</div>
                             <div class="member-text">分析市场中的分散式交易所，以及 BTC/ETH/graphene交换方式。分析客户Bitshares以便其在autotrader的发展。成立了团队，致力通过自己的外部注册的钥匙实现分散式交换。从事开发自动计算飞机剖面系统，实现了从零到实现行车计划方案。</div>
                         </div>
@@ -525,7 +525,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">马斯</div>
+                            <div class="member-name">Artur Maas</div>
                             <div class="member-position">Head of Community</div>
                             <div class="member-text">拥有10年与各个领域的国际社区成功合作的经验，曾与Cappasity 和 Cashbet等项目共事。</div>
                         </div>
