--- a/en/token.html
+++ b/en/token.html
@@ -251,7 +251,7 @@
                 <div class="col-12">
                     <div class="d-block d-lg-none">
                         <div class="token-title mb-2 mb-lg-4" id="TokenSchemeTitle--mobile">
-                            <span class="mark">Token Distribution</span> Chart
+                            <span class="mark">Token Distribution</span>
                         </div>
                         
                         <p class="token-text mb-2 mb-md-5">
@@ -264,7 +264,7 @@
 
                     <div class="d-none d-lg-block">
                         <div class="token-title mb-2 mb-lg-4" id="TokenSchemeTitle">
-                            <span class="mark">Token Distribution</span> Chart
+                            <span class="mark">Token Distribution</span>
                         </div>
                         
                         <p class="token-text">
@@ -274,7 +274,7 @@
 
                     <div class="h-100 d-flex align-items-end">
                         <ul class="token-info-list mb-3">
-                                                            <li class="list-item">Bounty and PR <span class="token-percent">02%</span></li>
+                                                            <li class="list-item">Bounty <span class="token-percent">02%</span></li>
                                                             <li class="list-item">Team <span class="token-percent">05%</span></li>
                                                             <li class="list-item">Advisors <span class="token-percent">05%</span></li>
                                                             <li class="list-item">VIARIUM Foundation <span class="token-percent">36%</span></li>
