--- a/en/index.html
+++ b/en/index.html
@@ -1219,7 +1219,7 @@
 					<ul class="hex-list pr-0 pr-lg-4 text-right">
 													<li class=" mb-3 mb-lg-5 list-item ">
 								<p class="list-text order-2 order-lg-1 text-left text-lg-right">
-									Securing rights to real estate property in a distributed ledger. Protection of copyright to content
+									Securing rights to real estate <br>property in a distributed ledger. <br>Protection of copyright to content
 								</p>
 								<img src="/en/img/hex-list/4.svg" alt="" class="list-image order-1 order-lg-2">
 							</li>
