--- a/ko/index.html
+++ b/ko/index.html
@@ -795,8 +795,9 @@
                     <div class="h-100 d-flex align-items-end">
                         <ul class="token-info-list mb-3">
                                                             <li class="list-item">보상 프로그램(Bounty) 및 PR <span class="token-percent">02%</span></li>
-                                                            <li class="list-item">팀 <span class="token-percent">05%</span></li>
-                                                            <li class="list-item">자문인 <span class="token-percent">05%</span></li>
+                                                            <li class="list-item">팀 <span class="token-percent">03%</span></li>
+                                                            <li class="list-item">자문인 <span class="token-percent">03%</span></li>
+                                                            <li class="list-item">설립자 <span class="token-percent">04%</span></li>
                                                             <li class="list-item">VIARIUM 기금 <span class="token-percent">36%</span></li>
                                                             <li class="list-item">토큰 판매 <span class="token-percent">52%</span></li>
                                                     </ul>
@@ -804,7 +805,7 @@
 
                 </div>
                 <div class="col-lg-6 col-7 text-right">
-                    <img src="/en/img/diagram_1.svg" alt="" class="img-responsive">
+                    <img src="/en/img/diagram_1.png" alt="" class="img-responsive w-100 mb-3">
                 </div>
             </div>
         </div>
