--- a/en/index.html
+++ b/en/index.html
@@ -1371,7 +1371,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         <span class="mark">Follow us</span> on our YouTube Channel and Medium
                     </p>
                     <div class="btn-group mb-5 w-100">
@@ -1545,7 +1545,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">Ivan Kuvshnnikov</div>
+                                            <div class="member-name">Ivan Kuvshinnikov</div>
                                             <div class="member-position">Sound designer</div>
                                             <div class="member-text">Experience in television and mass media. Member of ""GRIA"" (guild of interactive audio developers).Believes that sound design will play a significant role in the production of VR/AR.</div>
                                         </div>
@@ -1821,7 +1821,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">Ivan Kuvshnnikov</div>
+                                    <div class="member-name">Ivan Kuvshinnikov</div>
                                     <div class="member-position">Sound designer</div>
                                     <div class="member-text">Experience in television and mass media. Member of ""GRIA"" (guild of interactive audio developers).Believes that sound design will play a significant role in the production of VR/AR.</div>
                                 </div>
