--- a/en/team.html
+++ b/en/team.html
@@ -421,7 +421,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">Ivan Kuvshnnikov</div>
+                            <div class="member-name">Ivan Kuvshinnikov</div>
                             <div class="member-position">Sound designer</div>
                             <div class="member-text">Experience in television and mass media. Member of ""GRIA"" (guild of interactive audio developers).Believes that sound design will play a significant role in the production of VR/AR.</div>
                         </div>
