--- a/ko/index.html
+++ b/ko/index.html
@@ -1371,7 +1371,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         우리 채널 상에 올라오는 뉴스와 메시지를 주의해서 보시오
                     </p>
                     <div class="btn-group mb-5 w-100">
@@ -1545,7 +1545,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">Ivan Kuvshnnikov</div>
+                                            <div class="member-name">Ivan Kuvshinnikov</div>
                                             <div class="member-position">Sound designer</div>
                                             <div class="member-text">방송 및 대중매체 분야에 경력이 있으며, GRIA(대화형 오디오 개발자 협회)의 일원이다. 사운드 디자인이 VR/AR 제작에 중요한 역할을 할 것이라 생각한다.</div>
                                         </div>
@@ -1821,7 +1821,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">Ivan Kuvshnnikov</div>
+                                    <div class="member-name">Ivan Kuvshinnikov</div>
                                     <div class="member-position">Sound designer</div>
                                     <div class="member-text">방송 및 대중매체 분야에 경력이 있으며, GRIA(대화형 오디오 개발자 협회)의 일원이다. 사운드 디자인이 VR/AR 제작에 중요한 역할을 할 것이라 생각한다.</div>
                                 </div>
