--- a/ko/team.html
+++ b/ko/team.html
@@ -421,7 +421,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">Ivan Kuvshnnikov</div>
+                            <div class="member-name">Ivan Kuvshinnikov</div>
                             <div class="member-position">Sound designer</div>
                             <div class="member-text">방송 및 대중매체 분야에 경력이 있으며, GRIA(대화형 오디오 개발자 협회)의 일원이다. 사운드 디자인이 VR/AR 제작에 중요한 역할을 할 것이라 생각한다.</div>
                         </div>
