--- a/cn/index.html
+++ b/cn/index.html
@@ -1371,7 +1371,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         观看我们频道的新闻和事件
                     </p>
                     <div class="btn-group mb-5 w-100">
@@ -1545,7 +1545,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name"> Ivan Kuvshnnikov</div>
+                                            <div class="member-name"> Ivan Kuvshinnikov</div>
                                             <div class="member-position">Sound designer</div>
                                             <div class="member-text">拥有电视和大众传媒领域的经验。成立交互式音频研发人员协会。他认为，声音形成将在制作VR/AR中发挥重要作用。</div>
                                         </div>
@@ -1821,7 +1821,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name"> Ivan Kuvshnnikov</div>
+                                    <div class="member-name"> Ivan Kuvshinnikov</div>
                                     <div class="member-position">Sound designer</div>
                                     <div class="member-text">拥有电视和大众传媒领域的经验。成立交互式音频研发人员协会。他认为，声音形成将在制作VR/AR中发挥重要作用。</div>
                                 </div>
