--- a/cn/team.html
+++ b/cn/team.html
@@ -421,7 +421,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name"> Ivan Kuvshnnikov</div>
+                            <div class="member-name"> Ivan Kuvshinnikov</div>
                             <div class="member-position">Sound designer</div>
                             <div class="member-text">拥有电视和大众传媒领域的经验。成立交互式音频研发人员协会。他认为，声音形成将在制作VR/AR中发挥重要作用。</div>
                         </div>
