--- a/en/blog.html
+++ b/en/blog.html
@@ -333,7 +333,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         <span class="mark">Follow us</span> on our YouTube Channel and Medium
                     </p>
                     <div class="btn-group mb-5 w-100">
