--- a/ja/index.html
+++ b/ja/index.html
@@ -1371,7 +1371,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         ビデオやアナウンスでフォローして下さい
                     </p>
                     <div class="btn-group mb-5 w-100">
