--- a/ko/blog.html
+++ b/ko/blog.html
@@ -333,7 +333,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         우리 채널 상에 올라오는 뉴스와 메시지를 주의해서 보시오
                     </p>
                     <div class="btn-group mb-5 w-100">
