--- a/ru/index.html
+++ b/ru/index.html
@@ -1369,7 +1369,7 @@
 
                 <div class="offset-lg-3-5 col-lg-2-5">
                     
-                    <p class="text-md text-center mb-2 pt-5">
+                    <p class="text-lg text-center mb-2 pt-5">
                         Следите за <span class="mark">новостями и событиями</span> <br>на нашем канале
                     </p>
                     <div class="btn-group mb-5 w-100">
