--- a/ru/registration.html
+++ b/ru/registration.html
@@ -282,6 +282,13 @@
 
                 <div class="offset-lg-2-5 col-lg-3-5">
 
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        UNFORTUNATELY WE SHOULD CLOSE THIS SALE FOR US CITIZENS.
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+
                     <form action="" class="needs-validation" novalidate >
 
                         <div class="form-row mb-4">
