--- a/ja/registration.html
+++ b/ja/registration.html
@@ -311,11 +311,11 @@
 
                         <div class="form-row flex-md-row flex-column">
                             
-                            <div class="col-md-6 d-none align-items-center pl-4">
-                                <div class="custom-control custom-radio mb-3 mb-md-0">
+                            <div class="col-12 align-items-center pl-4">
+                                <div class="custom-control custom-radio mb-4">
                                     <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
                                     <label class="custom-control-label text-sm" for="customControlValidation2">
-                                        Я ознакомлен и принимаю условия<br>
+                                        Я ознакомлен и принимаю условия 
                                         <a href="" class="link-red">Viarium Privacy Policy</a>, 
                                         <a href="" class="link-red">White Paper</a>
                                     </label>
