--- a/ko/account-personal.html
+++ b/ko/account-personal.html
@@ -372,13 +372,8 @@
                                 <textarea name="" id="" cols="20" rows="5" placeholder="Адрес" class="form-control"></textarea>
                             </div>
 
-                            <div class="col-lg-6 mb-3 mb-lg-4 ">
-                                <button class="btn btn-default btn-fluid">СОХРАНИТЬ</button>
-                            </div>
-                        </div>
 
-                        <div class="form-row">
-                            <div class="col-lg-8 mb-4 mb-lg-0 d-none">
+                            <div class="col-lg-12 mb-4 ">
                                 <div class="custom-control custom-radio">
                                     <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
                                     <label class="custom-control-label" for="customControlValidation2">
@@ -389,8 +384,13 @@
                                 </div>
                             </div>
 
-                            
+
+                            <div class="col-lg-6 mb-3 mb-lg-4 ">
+                                <button class="btn btn-default btn-fluid">СОХРАНИТЬ</button>
+                            </div>
                         </div>
+
+                       
 
                     </form>
 
