--- a/ja/registration.html
+++ b/ja/registration.html
@@ -316,8 +316,8 @@
                                     <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
                                     <label class="custom-control-label text-sm" for="customControlValidation2">
                                         Я ознакомлен и принимаю условия 
-                                        <a href="" class="link-red">Viarium Privacy Policy</a>, 
-                                        <a href="" class="link-red">White Paper</a>
+                                        <!-- <a href="" class="link-red">Viarium Privacy Policy</a>,  -->
+                                        <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_WP_ENG.pdf" target="_blank" class="link-red">White Paper</a>
                                     </label>
                                 </div>
                             </div>
