--- a/ja/index.html
+++ b/ja/index.html
@@ -272,7 +272,11 @@
     </div>
 </nav>		<header class="header text-center text-lg-left">
 
+	<div id="particles-js" class="particles"></div>
+
 	<div class="container">
+
+
 		
 		<div class="row">
 			<div class="col-lg-6">
