--- a/cn/registration.html
+++ b/cn/registration.html
@@ -76,7 +76,7 @@
                             </ul>
         </div>
 
-        <a href="/users/sign_in?lang=zh-cn" class="btn btn-default btn-sm ml-auto ml-xl-2">进入</a>
+        <a href="/users/sign_in?lang=zh-CN" class="btn btn-default btn-sm ml-auto ml-xl-2">进入</a>
 
         <ul class="navbar-nav mx-sm-3 mx-md-3 ml-3 mr-3">
             <li class="nav-item dropdown">
@@ -317,7 +317,7 @@
                                     <label class="custom-control-label text-sm" for="customControlValidation2">
                                         Я ознакомлен и принимаю условия 
                                         <!-- <a href="" class="link-red">Viarium Privacy Policy</a>,  -->
-                                        <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_WP_ENG.pdf" target="_blank" class="link-red">White Paper</a>
+                                        <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_WP_CH.pdf" target="_blank" class="link-red">White Paper</a>
                                     </label>
                                 </div>
                             </div>
