--- a/cn/faq.html
+++ b/cn/faq.html
@@ -76,7 +76,7 @@
                             </ul>
         </div>
 
-        <a href="/users/sign_in?lang=zh-cn" class="btn btn-default btn-sm ml-auto ml-xl-2">进入</a>
+        <a href="/users/sign_in?lang=zh-CN" class="btn btn-default btn-sm ml-auto ml-xl-2">进入</a>
 
         <ul class="navbar-nav mx-sm-3 mx-md-3 ml-3 mr-3">
             <li class="nav-item dropdown">
