--- a/cn/team.html
+++ b/cn/team.html
@@ -76,7 +76,7 @@
                             </ul>
         </div>
 
-        <a href="/users/sign_in?lang=zh-cn" class="btn btn-default btn-sm ml-auto ml-xl-2">进入</a>
+        <a href="/users/sign_in?lang=zh-CN" class="btn btn-default btn-sm ml-auto ml-xl-2">进入</a>
 
         <ul class="navbar-nav mx-sm-3 mx-md-3 ml-3 mr-3">
             <li class="nav-item dropdown">
@@ -399,6 +399,9 @@
                                                                             <a class="social-1" href="https://www.facebook.com/profile.php?id=100001632010181">
                                                                                             <img src="/en/img/icons/facebook.png">
                                                                                     </a>
+                                                                            <a class="social-2" href="https://www.linkedin.com/in/дмитрий-захаров-53b950165/">
+                                                                                            <img src="/en/img/icons/linkedin.png">
+                                                                                    </a>
                                                                     </div>
                             </div>
                             <div class="member-name">Dmitry Zaharov</div>
@@ -418,6 +421,9 @@
                                     
                                                                             <a class="social-1" href="https://www.facebook.com/100009297159111">
                                                                                             <img src="/en/img/icons/facebook.png">
+                                                                                    </a>
+                                                                            <a class="social-2" href="https://www.linkedin.com/in/johnny-cat-447a1890/">
+                                                                                            <img src="/en/img/icons/linkedin.png">
                                                                                     </a>
                                                                     </div>
                             </div>
