--- a/ja/account-personal.html
+++ b/ja/account-personal.html
@@ -379,7 +379,7 @@
                                     <label class="custom-control-label" for="customControlValidation2">
                                         Я ознакомлен и принимаю условия 
                                         <!-- <a href="" class="link-red">Viarium Privacy Policy</a>,  -->
-                                        <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_WP_ENG.pdf" target="_blank" class="link-red">White Paper</a>
+                                        <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_WP_JP.pdf" target="_blank" class="link-red">White Paper</a>
                                     </label>
                                 </div>
                             </div>
