--- a/ru/account-personal.html
+++ b/ru/account-personal.html
@@ -301,6 +301,8 @@
                 </div>
 
                 <div class="col-lg-8 offset-lg-2">
+
+                    <div class="invalid-feedback d-block text-center py-4">Заполните обязательные поля</div>
                     
                     <form action="" class="form-grey">
                         
