--- a/ja/registration.html
+++ b/ja/registration.html
@@ -291,20 +291,22 @@
                         </button>
                     </div>
 
-                    <form action="" class="needs-validation" novalidate >
+                    <div class="invalid-feedback d-block text-center py-4">Заполните обязательные поля</div>
+
+                    <form action="">
 
                         <div class="form-row mb-4">
                             <div class="col-lg-6 mb-4 mb-lg-0">
-                                <input type="email" class="form-control" placeholder="Введите ваш E-mail" required>
+                                <input type="email" class="form-control" placeholder="Введите ваш E-mail">
                             </div>
                             <div class="col-lg-6">
-                                <input type="password" class="form-control" placeholder="Пароль" required>
+                                <input type="password" class="form-control" placeholder="Пароль">
                             </div>
                         </div>
 
                         <div class="form-row mb-4">
                             <div class="col-lg-6 mb-4 mb-lg-0">
-                                <input type="tel" class="form-control" placeholder="Телефон" required>
+                                <input type="tel" class="form-control" placeholder="Телефон">
                             </div>
                         </div>
 
@@ -326,8 +328,6 @@
                             </div>
 
                         </div>
-
-                        <div class="invalid-feedback text-center pt-4">Заполните обязательные поля</div>
                         
                     </form>
 
