--- a/ru/recovery.html
+++ b/ru/recovery.html
@@ -282,10 +282,10 @@
 
                 <div class="offset-lg-2-5 col-lg-3-5">
 
-                    <form action="" class="needs-validation" novalidate >
+                    <form action="" >
 
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Введите ваш E-mail" required>
+                            <input type="email" class="form-control" placeholder="Введите ваш E-mail">
                         </div>
 
 
@@ -336,28 +336,7 @@
 
     </div>
 
-</section>
-
-<script>
-// Example starter JavaScript for disabling form submissions if there are invalid fields
-(function() {
-  'use strict';
-  window.addEventListener('load', function() {
-    // Fetch all the forms we want to apply custom Bootstrap validation styles to
-    var forms = document.getElementsByClassName('needs-validation');
-    // Loop over them and prevent submission
-    var validation = Array.prototype.filter.call(forms, function(form) {
-      form.addEventListener('submit', function(event) {
-        if (form.checkValidity() === false) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
-        form.classList.add('was-validated');
-      }, false);
-    });
-  }, false);
-})();
-</script>        <footer class="section section-rounded section-footer" >
+</section>        <footer class="section section-rounded section-footer" >
         <div class="section-round section-round--white section-round-top" id="footer"></div>
         <div class="hex hex-7"></div>
         <div class="container">
