--- a/en/index.html
+++ b/en/index.html
@@ -820,17 +820,17 @@
                     <div class="h-100 d-flex align-items-end">
                         <ul class="token-info-list mb-3">
                                                             <li class="list-item">Bounty <span class="token-percent">02%</span></li>
-                                                            <li class="list-item">Team <span class="token-percent">03%</span></li>
                                                             <li class="list-item">Advisors <span class="token-percent">03%</span></li>
-                                                            <li class="list-item">Founders <span class="token-percent">04%</span></li>
                                                             <li class="list-item">VIARIUM Foundation <span class="token-percent">36%</span></li>
+                                                            <li class="list-item">Team <span class="token-percent">03%</span></li>
                                                             <li class="list-item">Token sale <span class="token-percent">52%</span></li>
+                                                            <li class="list-item">Founders <span class="token-percent">04%</span></li>
                                                     </ul>
                     </div>
 
                 </div>
                 <div class="col-lg-6 col-7 text-right">
-                    <img src="/en/img/diagram_1.png" alt="" class="img-responsive w-100 mb-3">
+                    <img src="/en/img/diagram_1.svg" alt="" class="img-responsive w-100 mb-3">
                 </div>
             </div>
         </div>
