--- a/ru/token.html
+++ b/ru/token.html
@@ -314,17 +314,17 @@
                     <div class="h-100 d-flex align-items-end">
                         <ul class="token-info-list mb-3">
                                                             <li class="list-item">Баунти и PR <span class="token-percent">02%</span></li>
-                                                            <li class="list-item">Команда <span class="token-percent">03%</span></li>
                                                             <li class="list-item">Эдвайзеры <span class="token-percent">03%</span></li>
-                                                            <li class="list-item">Учредители <span class="token-percent">04%</span></li>
                                                             <li class="list-item">VIARIUM фонд <span class="token-percent">36%</span></li>
+                                                            <li class="list-item">Команда <span class="token-percent">03%</span></li>
                                                             <li class="list-item">Продажа токенов <span class="token-percent">52%</span></li>
+                                                            <li class="list-item">Учредители <span class="token-percent">04%</span></li>
                                                     </ul>
                     </div>
 
                 </div>
                 <div class="col-lg-6 col-7 text-right">
-                    <img src="/en/img/diagram_1.png" alt="" class="img-responsive w-100 mb-3">
+                    <img src="/en/img/diagram_1.svg" alt="" class="img-responsive w-100 mb-3">
                 </div>
             </div>
         </div>
