--- a/ru/index.html
+++ b/ru/index.html
@@ -286,7 +286,7 @@
     </div>
 </nav>		<header class="header text-center text-lg-left">
 
-	<div id="particles-js" class="particles"></div>
+	<!-- <div id="particles-js" class="particles"></div> -->
 
 	<div class="container">
 
@@ -373,7 +373,7 @@
 			<div class="col-lg-6">
 				
 				<div class="header-image d-none d-lg-block">
-					<img src="/en/img/VR_Glass.svg" alt="" class="position-relative">
+					<img src="/en/img/VR_Glass.svg" alt="">
 				</div>
 
 				<div class="row">
